--- a/sections/header-1.html
+++ b/sections/header-1.html
@@ -50,7 +50,7 @@
 						"opacity": 100
 					}, 
 					"button_hover_color": { 
-						"color": "#ffffff", 
+						"color": "#f3f3f3", 
 						"opacity": 100 
 					},
 					"horizontal_padding": 25,
