--- a/sections/contact.html
+++ b/sections/contact.html
@@ -46,7 +46,7 @@
       {% dnd_row %}
         {% dnd_module 
           path='@hubspot/rich_text',
-          html='<h1 class="text-5xl mb-2 mt-7">Let’s work <strong>Together</strong></h1>'
+          html='<h1 class="mt-7">Let’s work <strong>Together</strong></h1>'
         %}
         {% end_dnd_module %}
       {% end_dnd_row %}
