--- a/sections/image-with-text.html
+++ b/sections/image-with-text.html
@@ -13,8 +13,8 @@
     {% dnd_row %}
       {% dnd_module
         path='../modules/image-with-post-reversible',
-        image={
-          'src': resize_image_url(get_asset_url('../images/unsplash.jpg'), 0, 0, 700)
+        image_field={
+          'src': '{{ context.image_src || "https://26015966.fs1.hubspotusercontent-eu1.net/hubfs/26015966/pexels-max-vakhtbovych-7587466%201.jpg" }}'
         },
         title={{ context.title || 'Title' }},
         description={{ context.description || 'Description' }}
