--- a/modules/products-grid.module/module.html
+++ b/modules/products-grid.module/module.html
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-2">
+<div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-2">
   {% for card in module.cards %}
   <div class="flex flex-col justify-between shadow-custom gap-3 {{ 'pb-3' if module.show_image eq true else 'p-3' }}">
     <div class="w-full">
