--- a/sections/cards-grid.html
+++ b/sections/cards-grid.html
@@ -11,7 +11,7 @@
 		{% dnd_row offset=0, width=12 %}
 			{% dnd_module
 				path='@hubspot/rich_text',
-				html={{ context.title || '<h1 class="font-medium text-2xl leading-tight mb-5 sm:text-5xl sm:leading-1">Selected <strong>Equipment Items</strong></h1>' }}
+				html={{ context.title || '<h1>Selected <strong>Equipment Items</strong></h1>' }}
 			%}
 			{% end_dnd_module %}
 		{% end_dnd_row %}
