--- a/sections/image-gallery-slider.html
+++ b/sections/image-gallery-slider.html
@@ -18,13 +18,27 @@
 		{% dnd_row offset=0, width=12 %}
 			{% dnd_module
 				path='@hubspot/rich_text',
-				html={{ context.title || '<h3 class="mb-2 text-2xl leading-tight lg:text-7xl lg:leading-1 font-bold"><span class="font-light">Izdvajamo iz</span> Galerije</h3>' }}
+				html={{ context.title || '<h3><span class="font-light">Izdvajamo iz</span> Galerije</h3>' }}
 			%}
 			{% end_dnd_module %}
 		{% end_dnd_row %}
 		{% dnd_row offset=0, width=12 %}
 			{% dnd_module
-				path='../modules/image-gallery-slider'
+				path='../modules/image-gallery-slider',
+				images={{ context.images || [
+					{
+						"image": {
+						"size_type": "auto",
+						"src": "https://145812822.fs1.hubspotusercontent-eu1.net/hubfs/145812822/Swiper%20Gallery%20Images/IMG-20241009-WA0018.webp",
+						"alt": "IMG-20241009-WA0018",
+						"loading": "lazy",
+						"width": 1000,
+						"height": 750,
+						"max_width": 1000,
+						"max_height": 750
+						}
+					}
+				]}}
 			%}
 			{% end_dnd_module %}
 		{% end_dnd_row %}
