--- a/sections/services-expanded-slider.html
+++ b/sections/services-expanded-slider.html
@@ -11,7 +11,7 @@
 		{% dnd_row offset=0, width=12 %}
 			{% dnd_module
 				path='@hubspot/rich_text',
-				html={{ context.title || '<h2 class="text-2xl md:text-5xl lg:text-7xl mb-4">Nase <strong>Usluge</strong></h2>' }}
+				html={{ context.title || '<h2>Nase <strong>Usluge</strong></h2>' }}
 			%}
 			{% end_dnd_module %}
 		{% end_dnd_row %}
