--- a/sections/header-1.html
+++ b/sections/header-1.html
@@ -33,7 +33,7 @@
 			{% dnd_module
 				path='@hubspot/button',
 				button_text={{ context.button_text || "BUTTON LABEL"}},
-				link={ "url": { "type": "EXTERNAL", "href": "https://atsistem.rs", "content_id": null }, "open_in_new_tab": false, "no_follow": false },
+				link={{ context.link || { "url": { "type": "EXTERNAL", "href": "https://atsistem.rs", "content_id": null }, "open_in_new_tab": false, "no_follow": false } }},
 				style={
 					"override_default_style": true, 
 					"button_font": { 
