--- a/modules/image-with-post-reversible.module/module.html
+++ b/modules/image-with-post-reversible.module/module.html
@@ -1,7 +1,7 @@
 <div
   class="flex flex-wrap {{ 'flex-row-reverse' if module.reverse_content_direction }} gap-3 lg:gap-[120px] xl:gap-[160px]">
   <img src="{{ module.image_field.src }}" loading="lazy" alt="{{ module.image.alt }}"
-    class="object-cover object-center max-h-[420px] w-full lg:w-1/2" />
+    class="object-cover object-center max-h-[300px] md:max-h-[420px] w-full lg:w-1/2" />
   <div class="flex w-full lg:w-1/2 items-left m-auto lg:items-center flex-1">
     <div class="flex flex-col">
       <{{ module.h_tag_choice }}>{{ module.title }}</{{ module.h_tag_choice }}>
