--- a/sections/hero.html
+++ b/sections/hero.html
@@ -3,7 +3,7 @@
   label: Hero
   isAvailableForNewContent: true
   screenshotPath: ../images/section-previews/hero.jpg
-  description: "Hero Image Section. Two text rows with two buttons"
+  description: "Hero Image Section"
 -->
 
 {% dnd_section
