--- a/sections/banner-small.html
+++ b/sections/banner-small.html
@@ -3,7 +3,7 @@
   label: Banner Small
   isAvailableForNewContent: true
   screenshotPath: ../images/section-previews/banner-small.jpg
-  description: "Cover photo promo section without a title and a button"
+  description: "Banner Section with Title and a Link"
 -->
 
 {% dnd_section
