--- a/sections/hero-2.html
+++ b/sections/hero-2.html
@@ -8,9 +8,9 @@
 
 {% dnd_section
 	class="
-  relative text-white min-h-[800px] h-full py-8 hero-2 pt-[230px]
-  before:size-full before:absolute before:top-0 before:left-0 before:bg-blackGradientHorizontal
-  after:size-full after:absolute after:top-0 after:left-0 after:bg-blackGradientVertical
+  relative text-white min-h-[100svh] md:min-h-[700px] lg:min-h-[800px] h-full py-8 px-4 hero-2 pt-[230px]
+  before:size-full before:absolute before:top-0 before:left-0 before:bg-blackGradientHorizontalMobile md:before:bg-blackGradientHorizontal
+  after:size-full after:absolute after:top-0 after:left-0 after:bg-blackGradientVerticalMobile md:after:bg-blackGradientVertical
   ",
 	background_image={
 		'backgroundPosition': 'MIDDLE_CENTER',
@@ -23,8 +23,8 @@
 		 {% dnd_module 
         path='@hubspot/rich_text',
         html={{ context.html || '
-          <h1 class="font-bold text-[76px]">Pokrivači za bazen</h1>
-          <p class="text-lg">Bazenski pokrivači i kupole sprečavaju prljanje bazena i isparavanje vode, čuvaju temperaturu vode i predstavljaju zaštitu od upada dece i kućnih ljubimaca.</p>
+          <h1 class="hero-title">Pokrivači za bazen</h1>
+          <p class="hero-subtitle">Bazenski pokrivači i kupole sprečavaju prljanje bazena i isparavanje vode, čuvaju temperaturu vode i predstavljaju zaštitu od upada dece i kućnih ljubimaca.</p>
         ' }}
       %}
       {% end_dnd_module %}
