--- a/sections/image-w-text-gradient.html
+++ b/sections/image-w-text-gradient.html
@@ -32,6 +32,7 @@
             "max_height": 500
           }
         }},
+        heading_id={{ context.heading_id || '' }},
         title={{ context.title || 'Title' }},
         description={{ context.description || 'Description' }}
         reverse_content_direction={{ context.reverse_content_direction || false }},
