--- a/modules/image-with-post-reversible.module/module.html
+++ b/modules/image-with-post-reversible.module/module.html
@@ -3,11 +3,16 @@
   <img src="{{ module.image_field.src }}" loading="lazy" alt="{{ module.image.alt }}"
     class="object-cover object-center max-h-[300px] md:max-h-[420px] w-full lg:w-1/2" />
   <div class="flex w-full lg:w-1/2 items-left m-auto lg:items-center flex-1">
-    <div class="flex flex-col">
-      <{{ module.h_tag_choice }} class="h3 mb-2">{{ module.title }}</{{ module.h_tag_choice }}>
-      <p>{{ module.description }}</p>
+    <div class="flex flex-col w-full">
+      <{{ module.h_tag_choice }} class="h3 {{ 'mb-1' if module.premium_product else 'mb-0' }}" id="{{ module.heading_id }}">{{ module.title }}</{{ module.h_tag_choice }}>
+      {% if module.premium_product %}
+      <div class="w-full bg-purpleGradient">
+        <p class="text-xl text-center text-white tracking-wider leading-1">Premium</p>
+      </div>
+      {% endif %}
+      <p class="mt-2">{{ module.description }}</p>
       {% if module.link.url.href != '' %}
-      <a href="{{ module.link.url.href }}" {% if module.link.open_in_new_tab==true %} target="_blank" {% endif %}
+      <a href="{{ module.link.url.href }}" {{ 'target="_blank"' if module.link.open_in_new_tab }}
         class="button w-fit uppercase mt-4">
         {{ module.link_label }}
       </a>
